--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,10 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"ms-python.black-formatter"
+				"ms-python.black-formatter",
+				"Gruntfuggly.todo-tree",
+				"batisteo.vscode-django",
+				"esbenp.prettier-vscode"
 			]
 		}
 	},
