--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,8 @@
 				"ms-python.black-formatter",
 				"Gruntfuggly.todo-tree",
 				"batisteo.vscode-django",
-				"esbenp.prettier-vscode"
+				"esbenp.prettier-vscode",
+				"Zignd.html-css-class-completion"
 			]
 		}
 	},
