--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
 				"Gruntfuggly.todo-tree",
 				"batisteo.vscode-django",
 				"esbenp.prettier-vscode",
-				"Zignd.html-css-class-completion"
+				"Zignd.html-css-class-completion",
+				"monosans.djlint"
 			]
 		}
 	},
