--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-POSTGRES_USER=
-POSTGRES_DB=
-POSTGRES_PASSWORD=
+POSTGRES_USER=pguser
+POSTGRES_DB=pgdb
+POSTGRES_PASSWORD=pgpass
 
-DJANGO_SUPERUSER_EMAIL=
-DJANGO_SUPERUSER_USERNAME=
-DJANGO_SUPERUSER_PASSWORD=
+DJANGO_SUPERUSER_EMAIL=admin@example.com
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_PASSWORD=changeme
