fix(devcontainer): mount .ssh and .gitconfig for git usage inside container

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -8,6 +8,8 @@ services:
 
     volumes:
       - ../..:/workspaces:cached
+      - ~/.ssh:/home/vscode/.ssh:cached
+      - ~/.gitconfig:/home/vscode/.gitconfig:cached
 
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
