--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,9 @@
 				"ms-python.black-formatter",
 				"Gruntfuggly.todo-tree",
 				"batisteo.vscode-django",
-				"esbenp.prettier-vscode"
+				"esbenp.prettier-vscode",
+				"Zignd.html-css-class-completion",
+				"monosans.djlint"
 			]
 		}
 	},
@@ -21,7 +23,7 @@
 	// This can be used to network with other containers or the host.
 	// "forwardPorts": [5000, 5432],
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip install --user -r requirements.txt && python manage.py migrate && python manage.py createsuperuser --no-input"
+	"postCreateCommand": "bash ${containerWorkspaceFolder}/.devcontainer/post-create.sh ${containerWorkspaceFolder}"
 	// Configure tool-specific properties.
 	// "customizations": {},
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
