--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "editor.formatOnSave": true,
     "[*]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode",
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter"
@@ -9,4 +9,9 @@
     "[django-html]": {
         "editor.defaultFormatter": "monosans.djlint"
     },
+    "files.associations": {
+        "*.django": "django-html"
+    },
+    "editor.tabSize": 4,
+    "prettier.tabWidth": 4
 }
