fix(devcontainer): mv .env stuff to init-host.sh
.env has to be created before calling docker-compose

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,6 +18,8 @@
 			]
 		}
 	},
+	// run commands on the host before the container is created
+	"initializeCommand": "bash ${localWorkspaceFolder}/.devcontainer/init-host.sh ${localWorkspaceFolder}",
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
