build: add basic docker compose build

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 POSTGRES_USER=pguser
 POSTGRES_DB=pgdb
 POSTGRES_PASSWORD=pgpass
+POSTGRES_HOST=db
 
 DJANGO_SUPERUSER_EMAIL=admin@example.com
 DJANGO_SUPERUSER_USERNAME=admin
