--- a/compose.yaml
+++ b/compose.yaml
@@ -6,7 +6,8 @@ services:
     ports:
     - "8000:8000"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     env_file: .env
     restart: unless-stopped
 
@@ -14,5 +15,12 @@ services:
     image: postgres:latest
     volumes:
       - ./pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+      start_interval: 1s
     env_file: .env
     restart: unless-stopped
