--- a/compose.yaml
+++ b/compose.yaml
@@ -22,5 +22,8 @@ services:
       retries: 5
       start_period: 30s
       start_interval: 1s
-    env_file: .env
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     restart: unless-stopped
