--- a/compose.yaml
+++ b/compose.yaml
@@ -4,7 +4,7 @@ services:
   app:
     build: .
     ports:
-    - "8000:8000"
+    - "8080:8080"
     depends_on:
       db:
         condition: service_healthy
@@ -12,7 +12,7 @@ services:
     restart: unless-stopped
 
   db:
-    image: postgres:latest
+    image: postgres:16.2-alpine3.18
     volumes:
       - ./pgdata:/var/lib/postgresql/data
     healthcheck:
