--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ POSTGRES_HOST=db
 DJANGO_SUPERUSER_EMAIL=admin@example.com
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_PASSWORD=changeme
+
+DJANGO_SECRET_KEY=django-insecure-+%48*+a99mf#1abc5t)zm@=p%jndkue#r3)jn^)#&thw+e5%g7
