feat(docker): add docker prod (#28)

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
 POSTGRES_USER=pguser
 POSTGRES_DB=pgdb
 POSTGRES_PASSWORD=pgpass
+POSTGRES_HOST=db
 
 DJANGO_SUPERUSER_EMAIL=admin@example.com
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_PASSWORD=changeme
+
+DJANGO_SECRET_KEY=django-insecure-+%48*+a99mf#1abc5t)zm@=p%jndkue#r3)jn^)#&thw+e5%g7
