feat: add favicon to prod
now nginx serves the favicons without logs

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,9 +23,12 @@ http {
 
         access_log /proc/1/fd/1;
 
-        location = /favicon.ico {
-            access_log off; log_not_found off;
+        location ~ ^/(static/favicon.svg|static/favicon.png) {
+            root /app;
+            access_log off;
+            log_not_found off;
         }
+
         location /static/ {
             root /app;
         }
