feat(docker): implement https/wss requirements
add https wss for prod, enable using env in nginx.conf, redirect http to
https in prod, change prod port, fix local dev with http and ws

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+HOST_DOMAIN=localhost
+
 POSTGRES_USER=pguser
 POSTGRES_DB=pgdb
 POSTGRES_PASSWORD=pgpass
@@ -7,4 +9,4 @@ DJANGO_SUPERUSER_EMAIL=admin@example.com
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_PASSWORD=changeme
 
-DJANGO_SECRET_KEY=django-insecure-+%48*+a99mf#1abc5t)zm@=p%jndkue#r3)jn^)#&thw+e5%g7
+DJANGO_SECRET_KEY=changeme-to-something-unique-and-secret-a1*B34%fsa!
