--- a/nginx.conf
+++ b/nginx.conf
@@ -14,14 +14,20 @@ http {
 
     keepalive_timeout 65;
 
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
     access_log access.log;
     server {
-        listen 8080;
-        server_name darkpong;
+        listen 8443 ssl;
+        server_name $HOST_DOMAIN;
+        ssl_certificate /app/certs/selfsigned.crt;
+        ssl_certificate_key /app/certs/selfsigned.key;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
 
         access_log /proc/1/fd/1;
+
+        error_page 497 https://$server_name:$server_port$request_uri;
 
         location ~ ^/(static/favicon.svg|static/favicon.png) {
             root /app;
