build: get DEBUG from env
as DJANGO_PRODUCTION in env

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ POSTGRES_DB=pgdb
 POSTGRES_PASSWORD=pgpass
 POSTGRES_HOST=db
 
+# Set to "False" to enable debug mode, anything else will disable it
+DJANGO_PRODUCTION=False
+
 # Comma-seperated list of allowed hosts, e.g. "localhost,*.example.com"
 # Set to "*" to allow all hosts, in production this should match HOST_DOMAIN
 DJANGO_ALLOWED_HOSTS=*
