feat(env): clean

--- a/.env.example
+++ b/.env.example
@@ -3,22 +3,22 @@
 
 # Host domain, e.g. "example.com"
 # Should match the actual domain the app is hosted on in production
-HOST_DOMAIN=localhost
+HOST_DOMAIN=
 
-POSTGRES_USER=pguser
-POSTGRES_DB=pgdb
-POSTGRES_PASSWORD=pgpass
-POSTGRES_HOST=db
+POSTGRES_USER=
+POSTGRES_DB=
+POSTGRES_PASSWORD=
+POSTGRES_HOST=
 
 # Set to "False" to enable debug mode, anything else will disable it
-DJANGO_PRODUCTION=False
+DJANGO_PRODUCTION=
 
 # Comma-seperated list of allowed hosts, e.g. "localhost,*.example.com"
 # Set to "*" to allow all hosts, in production this should match HOST_DOMAIN
-DJANGO_ALLOWED_HOSTS=*
+DJANGO_ALLOWED_HOSTS=
 
-DJANGO_SUPERUSER_EMAIL=admin@example.com
-DJANGO_SUPERUSER_USERNAME=admin
-DJANGO_SUPERUSER_PASSWORD=changeme
+DJANGO_SUPERUSER_EMAIL=
+DJANGO_SUPERUSER_USERNAME=
+DJANGO_SUPERUSER_PASSWORD=
 
-DJANGO_SECRET_KEY=changeme-to-something-unique-and-secret-a1*B34%fsa!
+DJANGO_SECRET_KEY=
